# nlp-2-sql

./: README.md  pyproject.toml
app/: .env  main.py
app/db/: connections.py
app/routes/: api.py
app/services/: query_chain.py  query_service.py  visualization_service.py
app/utils/: ai_generate_code.py  clean_ai_plot_code.py  execute_python_code.py  plain_language_convertion.py  sql_extraction.py  sql_utils.py  visualization_utils.py
langserve/: langchain.yml  llm_service.py
